api gateway added

--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -1,10 +1,11 @@
 spring:
   application:
-    name: FILTER-SERVICE
-  data:
-    mongodb:
-      database: filterdb
-      uri: mongodb://localhost:27017
+    name: api-gateway
+  cloud:
+    gateway:
+      discovery:
+        locator:
+          enabled: true
 eureka:
   client:
     fetch-registry: true
@@ -15,4 +16,4 @@ eureka:
     instance-id: ${spring.application.name}:${instanceId:${random.value}}
     prefer-ip-address: true
 server:
-  port: 0
+  port: 9010
