--- a/inventory-service/src/main/resources/application.yml
+++ b/inventory-service/src/main/resources/application.yml
@@ -1,4 +1,6 @@
 spring:
+  application:
+    name: INVENTORY-SERVICE
   datasource:
     username: postgres
     url: jdbc:postgresql://localhost:5432/inventorydb-dev
@@ -13,5 +15,14 @@ spring:
             mode: none
     hibernate:
       ddl-auto: update
+eureka:
+  client:
+    fetch-registry: true
+    register-with-eureka: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka
+  instance:
+    instance-id: ${spring.application.name}:${instanceId:${random.value}}
+    prefer-ip-address: true
 server:
-  port: '8090'
+  port: 0
