--- a/inventory-service/src/main/resources/application.yml
+++ b/inventory-service/src/main/resources/application.yml
@@ -9,12 +9,13 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
-      javax:
-        persistence:
-          validation:
-            mode: none
     hibernate:
       ddl-auto: update
+  kafka:
+    producer:
+      bootstrap-servers: http://192.168.1.102:9092
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
 eureka:
   client:
     fetch-registry: true
@@ -22,7 +23,7 @@ eureka:
     service-url:
       defaultZone: http://localhost:8761/eureka
   instance:
-    instance-id: ${spring.application.name}:${instanceId:${random.value}}
+    instance-id: ${spring.application.name}:${random.value}}
     prefer-ip-address: true
 server:
   port: 0
