--- a/rental-service/src/main/resources/application.yml
+++ b/rental-service/src/main/resources/application.yml
@@ -31,3 +31,9 @@ eureka:
     prefer-ip-address: true
 server:
   port: 0
+resilience4j.retry:
+  instances:
+    retryToInventoryService:
+      maxAttempts: 20
+      waitDuration: 10s
+
