--- a/maintance-service/pom.xml
+++ b/maintance-service/pom.xml
@@ -5,14 +5,14 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.0.6</version>
+        <version>3.1.0</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.example</groupId>
-    <artifactId>rental-service</artifactId>
+    <groupId>com.kodlamaio</groupId>
+    <artifactId>maintenance-service</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>rental-service</name>
-    <description>Demo project for Spring Boot</description>
+    <name>maintenance</name>
+    <description>This is a maintenance service for microservice project</description>
     <properties>
         <java.version>17</java.version>
     </properties>
@@ -21,11 +21,16 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
-        
+
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>com.kodlamaio</groupId>
