--- a/inventory-service/pom.xml
+++ b/inventory-service/pom.xml
@@ -12,15 +12,15 @@
     <artifactId>inventory-service</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>inventory-service</name>
-    <description>This is a invertory service for microservice project</description>
+    <description>This is an invertory service for microservice project</description>
     <properties>
         <java.version>17</java.version>
     </properties>
     <dependencies>
 
         <dependency>
-            <groupId>org.postgresql</groupId>
-            <artifactId>postgresql</artifactId>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
             <scope>runtime</scope>
         </dependency>
         <dependency>
