--- a/invoice-service/pom.xml
+++ b/invoice-service/pom.xml
@@ -9,10 +9,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.kodlamaio</groupId>
-    <artifactId>filter-service</artifactId>
+    <artifactId>invoice-service</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>filter-service</name>
-    <description>Demo project for Spring Boot</description>
+    <name>invoice-service</name>
+    <description>this is an invoice-service for microsevices</description>
     <properties>
         <java.version>17</java.version>
     </properties>
@@ -20,6 +20,12 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-mongodb</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>com.kodlamaio</groupId>
