--- a/maintenance-service/pom.xml
+++ b/maintenance-service/pom.xml
@@ -33,11 +33,20 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>com.kodlamaio</groupId>
+            <groupId>io.github.NurYucel</groupId>
             <artifactId>common-package</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
+    <repositories>
+        <repository>
+            <id>snapshot-repo</id>
+            <url>https://s01.oss.sonatype.org/content/repositories/snapshots/</url>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
 
     <build>
         <plugins>
