--- a/invoice-service/src/main/resources/application.yml
+++ b/invoice-service/src/main/resources/application.yml
@@ -5,4 +5,4 @@ spring:
     config:
       profile: dev
   config:
-    import: optional:configserver:http://localhost:8888
+    import: optional:config-server:http://localhost:8888
